--- a/home.html
+++ b/home.html
@@ -6,14 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
 	<nav>
 		<ul>
-			<li><a href="home.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="services.html">Services</a></li>
-			<li><a href="contact.html">contact</a></li>
+	              <li><a href="home.htnl">home</a></li>   
+			      <li><a href="about.html">About</a></li>
+			      <li><a href="services.html">Services</a></li>
+			      <li><a href="contact.html">contact</a></li>
 		</ul>
+
+						
 		<img src="images/download.jfif" class="logo">
 	</nav>
 
@@ -21,8 +22,29 @@
 	<div class="first-section">
 		<p>SIR is a community based organization that support refugees with technology</p>
 	</div>
+	<div class="second-section">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		
+	</div>
+	<div class="footer">
+		<a href="">facebook</a>
+		<a herf="">Instageam</a>
+		<a href="">Twiter</a>
+		<a herf="">Github</a>
+		<a href="">YOUTUBE</a>
+
+		<div>
+
+
 
 	<h2>home page</h2>
+
 
 </body>
 </html>
