--- a/contact.html
+++ b/contact.html
@@ -3,46 +3,54 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	nav>
-		<ul>
-	              <li><a href="home.htnl">home</a></li>   
-			      <li><a href="about.html">About</a></li>
-			      <li><a href="services.html">Services</a></li>
-			      <li><a href="contact.html">contact</a></li>
-		</ul>
+<nav>
+<ul>
+  <li><a href="home.html">home</a></li>   
+  <li><a href="about.html">About</a></li>
+  <li><a href="services.html">Services</a></li>
+  <li><a href="contact.html">contact</a></li>
+</ul>
+<img src="images/download.jfif" class="logo">
+	</nav>
+
+	<div class="first-section">
+		
+	</div>
 		<br>
 		<form>
-			phone:=+2540793792988<br>
+			phone:=+254793792988<br>
 			Email:ekramyousif567@gmli.com<br><br>
 			<label for="name">Name:</label>
 			<input type="text"name="">
 			<br><br>
-			<lable for="emali">Email</lable>
-			<lobel for="subject">subject</lobel>
+			<label for="emali">Email</label><br>
+			<input type="email" name="">
+			<br><br>
+			<label for="subject">subject</label>
+
 			<input type="text"name=""><br>
-			<lobet>message<lobel><br>
-			<textarea cois="70"row="10">
+			<label>message</label><br>
+			<textarea cols="70" rows="10">
 				
 			</textarea>
 			<br><br>
 
-			<button type="submit"</lobel>	</form
-				</div>
-	<div class="footer">
-		<a href="https://web.facebook.com/">facebook</a>
-		<a herf="">Instagram</a>
-		<a href="">Twiter</a>
-		<a herf="">Github</a>
-		<a href="">Youtuble</a>
+			<button type="submit"> submit	</button>
+				</form>
+<div class="footer">
+		
 
-		<div>
-
-
-
-	
-
-
+		<a herf="">facebook</a>
+	<a href="">INSTAGRAM</a>
+	<a href="">SNAPCHAT</a>
+	<a href="">TWITTER</a>
+	<a href="">YOUTUB</a>
+	<a href="https://github.com/Ildephonsemalu/codedust">GITHUB</a>
+	<a href="">YOUTUB</a>
+	<a href="">GTIHUB</a>
+	</div>
 </body>
 </html>
