--- a/home.html
+++ b/home.html
@@ -7,16 +7,17 @@
 </head>
 <body>
 	<nav>
-		<ul>
-	              <li><a href="home.htnl">home</a></li>   
-			      <li><a href="about.html">About</a></li>
-			      <li><a href="services.html">Services</a></li>
-			      <li><a href="contact.html">contact</a></li>
-		</ul>
+	<ul>
+      <li><a href="home.htnl">home</a></li>   
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="contact.html">contact</a></li>
+</ul>
 
 						
-		<img src="images/download.jfif" class="logo">
+<img src="images/download.jfif" class="logo">
 	</nav>
+	
 
 
 	<div class="first-section">
@@ -38,12 +39,16 @@
 		<a href="">Twiter</a>
 		<a herf="">Github</a>
 		<a href="">YOUTUBE</a>
+		<span>Copyright &copy; 2021 Ekram Yousif</span>
 
-		<div>
+    </div>
+
+<marquee direction="right" bgcolor="blue" scrolldelay="10" hspace="200" height="200">
+		This is marquee
+	<marquee>
 
 
 
-	<h2>home page</h2>
 
 
 </body>
