--- a/services.html
+++ b/services.html
@@ -8,14 +8,14 @@
 <body>
 	<nav>
 		<ul>
-	              <li><a href="home.htnl">home</a></li>   
+	              <li><a href="home.html">home</a></li>   
 			      <li><a href="about.html">About</a></li>
 			      <li><a href="services.html">Services</a></li>
 			      <li><a href="contact.html">contact</a></li>
 		</ul>
 
 						
-		<img src="images/download.jfif" 
+		<img src="images/download.jfif">
 	</nav>
 	<div class="first-section">
 		we provides service as seen below 
@@ -34,7 +34,7 @@
 	</ol>
 	<div class="footer">
 		
-	</div>
+
 	<a herf="">facebook</a>
 	<a href="">INSTAGRAM</a>
 	<a href="">SNAPCHAT</a>
@@ -43,6 +43,8 @@
 	<a href="https://github.com/Ildephonsemalu/codedust">GITHUB</a>
 	<a href="">YOUTUB</a>
 	<a href="">GTIHUB</a>
+	</div>
+	
 
 	
 
